<resources>
    <string name="app_name">Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cart_is_empty">your cart is empty!</string>
    <string name="remove">remove</string>
    <string name="currancy">EGP</string>
    <string name="decrement">decrement</string>
    <string name="increment">increment</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="no_connection">no connection</string>
    <string name="subtotal">Subtotal:</string>
    <string name="cart">Cart</string>
    <string name="filter">filter</string>
    <string name="map">map</string>
    <string name="OK">Ok</string>
    <string name="GPS">GPS</string>
    <string name="change">Change</string>
    <string name="arabic">Arabic</string>
    <string name="english">english</string>
    <string name="address">Address</string>
    <string name="currency">Currency</string>
    <string name="currency_title">Currency:</string>
    <string name="language">Language</string>
    <string name="login">login</string>
    <string name="orders">Orders</string>
    <string name="saved_items">Saved Items</string>
    <string name="phone">Phone</string>
    <string name="zipcode">ZipCode</string>
    <string name="country">Country</string>
    <string name="egypt">Egypt</string>
    <string name="city">City</string>
    <string name="govern">Govern</string>
    <string name="save">Save</string>
    <string name="availability">Available at Stock:</string>
    <string name="cancel">Cancel</string>
    <string name="in_stock">in Stock</string>
    <string name="rm_msg">are you need delete this product</string>
    <string name="delete">delete</string>
    <string name="home">Home</string>
    <string name="brands">Brands</string>
    <string name="addresses">Addresses</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="women">WOMEN</string>
    <string name="kid">KID</string>
    <string name="men">MEN</string>
    <string name="sale">SALE</string>
    <string name="favourites">Favourites</string>
    <string name="filter_price">Filter by Price:</string>
    <string name="Order_number">Order number:</string>
    <string name="Order_total">Order total:</string>
    <string name="items_number">number of Items:</string>
    <string name="login_required">Login Required</string>
    <string name="alert_msg">Please log in to continue.</string>
    <string name="coupons">Coupons</string>
    <string name="no_internet_msg">An internet error occurred, Please check your connection!</string>
    <string name="no_data_msg">Not Available yet!</string>
    <string name="wraning">Warning</string>
    <string name="wraning_remove">Are you sure you want to delete this item ?</string>
    <string name="logout">Logout</string>
    <string name="order_total">Order total:</string>
    <string name="brand">Brand:</string>
    <string name="rating">Rating:</string>
    <string name="description">-Description-</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add_to_chart">Add To Chart</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="coupon">Coupon</string>
    <string name="tax">Tax:</string>
    <string name="discount">Discount:</string>
    <string name="shipping_fee">Shipping Fee:</string>
    <string name="total">Total:</string>
    <string name="next">Next</string>
    <string name="Valid_Coupon">Valid_Coupon</string>
    <string name="inValid_Coupon">inValid Coupon</string>
  
    <string name="signup_account_nfor_you">Signup Account\nFor You</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="phone_auth">Phone</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="login_auth">Login</string>
    <string name="join_with_google">Join With Google</string>
    <string name="login_into_nyour_account">Login Into\nYour Account.</string>
    <string name="let_your_magical_journey_begin">Let Your Magical Journey Begin</string>
    <string name="alert">alert</string>
    <string name="Must_login">You Must login first.</string>
    <string name="Order_details">Order Details</string>
    <string name="search">Search</string>
    <string name="discount_alert">you get discount code</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="cart_toast">cannot add more</string>
    <string name="product_add">added to cart</string>
    <string name="product_selected">size and color not selected</string>
    <string name="phone_is_not_valid">Phone Is Not Valid</string>
    <string name="data_not_valid">Data Not Valid</string>
    <string name="payment_successfully">successful payment</string>
    <string name="payment_error">payment error</string>
    <string name="payment_cancel">payment cancel</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_zipcode">Invalid ZipCode</string>
    <string name="invalid_government">Invalid Government</string>
    <string name="invalid_city">Invalid City</string>
    <string name="invalid_phone">Invalid Phone</string>
</resources>