<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address_form.AddressFormFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tiltleLayout"
            android:layout_width="wrap_content"
            android:layout_height="306dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:weightSum="6">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/address"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutAddress" />

            <TextView
                android:id="@+id/zip_code2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zipcode"
                app:layout_constraintBottom_toBottomOf="@+id/it_zipcode"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/it_zipcode" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phone"
                app:layout_constraintBottom_toBottomOf="@+id/it_phone"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/it_phone" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/country"
                app:layout_constraintBottom_toBottomOf="@+id/it_country"
                app:layout_constraintEnd_toEndOf="@+id/zip_code"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/it_country" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/govern"
                app:layout_constraintBottom_toBottomOf="@+id/governTextInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/governTextInputLayout" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/city"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="344dp"
            android:layout_height="304dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textInputLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#FFFFFF">

                <EditText
                    android:id="@+id/ti_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/address"
                    android:inputType="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/location_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/location_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:src="@drawable/ic_round_add_location_alt_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/it_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/zipcode"
                android:inputType="none"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/it_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="none"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/it_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:minHeight="48dp"
                android:text="@string/egypt"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/governTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true">


                <AutoCompleteTextView
                    android:id="@+id/auto_complete_govern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/govern"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:enabled="false"
                    android:hint="@string/city"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>